<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweetr</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Sign In with Twitter</string>
    <string name="error_something_wrong">Something went wrong, please try again later.</string>
    <string name="error_no_internet">There seems to be a problem with your internet connection.</string>
    <string name="iv_cd_userprofile">User\'s profile photo</string>
    <string name="title_activity_tweet_time_line">Twitter Time Line</string>
    <string name="compose">Compose</string>
    <string name="retweets">Retweets</string>
    <string name="favourites">Favourites</string>
    <string name="emptystring"></string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_compose_tweet">Compose Tweet</string>
    <string name="compose_tweet">Compose Tweet</string>
    <string name="cancel_compose_tweet">Cancel</string>
    <string name="send_tweet">Tweet</string>
    <string name="quote_retweet">Quote</string>
    <string name="retweet_title">Retweet</string>
    <string name="retweet_msg">Retweet this to your followers?</string>
    <string name="edit_text_hint_default">Compose a New Tweet</string>
    <string name="tab_home">Home</string>
    <string name="tab_mention">Mentions</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="name">Name</string>
    <string name="title_remove_image">Remove</string>
    <string name="msg_remove_image">Are you sure you want to remove this image?</string>
    <string name="tag">Tag Line</string>
    <string name="label_follower">FOLLOWERS</string>
    <string name="label_following">FOLLOWING</string>
    <string name="label_tweets">TWEETS</string>

    <string-array name="planets_array">
        <item>My Profile</item>
        <item>Following</item>
        <item>Followers</item>
        <item>Settings</item>
        <item>Close</item>
    </string-array>

    <string name="action_contact">Contact</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

</resources>