<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawable" >

    <RelativeLayout
        android:id="@+id/rl_tweet_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/tv_sendTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/send_tweet"
            android:textColor="#DC297ABA"
            android:textSize="13sp" />

        <View
            android:id="@+id/v_separator4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@id/tv_sendTweet"
            android:background="#78297ABA" />

        <TextView
            android:id="@+id/tv_replyTweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toLeftOf="@id/v_separator4"
            android:text="140"
            android:textColor="#9900AB17"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_tweetbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/tv_replyTweetCount"
            android:background="@drawable/apptheme_textfield_activated_holo_light"
            android:hint="@string/whats_happening"
            android:maxLength="140"
            android:textColor="#000000"
            android:textColorHint="#666666" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_tweet_container" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/rl_username_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp" >

                <ImageView
                    android:id="@+id/ivProfileCompose"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/iv_cd_userprofile"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/tvUserNameCompose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ivProfileCompose"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/ivProfileCompose"
                    android:text="First Last"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvScreenNameCompose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tvUserNameCompose"
                    android:layout_below="@id/tvUserNameCompose"
                    android:layout_marginRight="10dp"
                    android:text="username"
                    android:textColor="#666666"
                    android:textSize="11sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvTweetBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_username_details"
                android:layout_margin="8dp"
                android:autoLink="web"
                android:hint="@string/whats_happening"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivDetailImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_below="@id/tvTweetBody"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:contentDescription="@string/iv_cd_userprofile"
                android:padding="5dp"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />

             <TextView
                android:id="@+id/tvTimeCreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivDetailImage"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="15dp"
                android:textColor="#808080"
                android:textSize="12sp" />
            
            <View
                android:id="@+id/v_separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tvTimeCreated"
                android:layout_margin="10dp"
                android:background="#78297ABA" />

            <RelativeLayout
                android:id="@+id/rl_tweetDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_separator1"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivFavouritesImage"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/favourites"
                    android:src="@drawable/ic_tweetr_favourite" />

                <TextView
                    android:id="@+id/tvFavoritesCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@id/ivFavouritesImage"
                    android:text="232 Favorites"
                    android:textColor="#78297ABA"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivRetweetsImage"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tvFavoritesCount"
                    android:contentDescription="@string/retweets"
                    android:src="@drawable/ic_retweets" />

                <TextView
                    android:id="@+id/tvRetweetsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_toRightOf="@id/ivRetweetsImage"
                    android:text="782323 Retweets"
                    android:textColor="#78297ABA"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/v_separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/rl_tweetDetails"
                android:layout_margin="10dp"
                android:background="#78297ABA" />

            <LinearLayout
                android:id="@+id/llActionHandlers"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_below="@id/v_separator2"
                android:orientation="horizontal" >
                
                <ImageView
                    android:id="@+id/ivReplyUserAction"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:maxHeight="22dp"
                    android:minHeight="22dp"
                    android:contentDescription="@string/favourites"
                    android:src="@drawable/ic_reply_action" />
                
                <ImageView
                    android:id="@+id/ivFavoriteAction"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:maxHeight="22dp"
                    android:minHeight="22dp"
                    android:contentDescription="@string/favourites"
                    android:src="@drawable/ic_favorite_selected" />
                
                <ImageView
                    android:id="@+id/ivRetweetAction"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:maxHeight="22dp"
                    android:minHeight="22dp"
                    android:contentDescription="@string/favourites"
                    android:src="@drawable/ic_retweeted_action" />
                
                <ImageView
                    android:id="@+id/ivShareAction"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:maxHeight="22dp"
                    android:minHeight="22dp"
                    android:contentDescription="@string/favourites"
                    android:src="@drawable/ic_share_action" />
                
            </LinearLayout>

            <View
                android:id="@+id/v_separator3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/llActionHandlers"
                android:layout_margin="10dp"
                android:background="#78297ABA" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>